# package-manager-demo

./: .gitignore  DESCRIPTION  README.md
.github/workflows/: package-manager-demo.yml  package-manager-python-demo.yml  package-manager-r-demo.yml  r.yml
R/: hello.R
man/: hello.Rd
ppm-builder/: Dockerfile  README.md  builder-generator-py.groovy  builder-generator-r.groovy  config.yaml  plugins.txt  py-builder.groovy  r-builder.groovy  run.sh
ppm-builder/templates/: README.md  r-builder.groovy
pypi-to-local-python/: README.md  add-pypi-package.sh
python-package-manager-demo/: README.md  pyproject.toml
r-package-manager-demo/: DESCRIPTION  LICENSE  README.md
r-package-manager-demo/vignettes/: introduction.Rmd
