[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "package-manager-demo"
version = "1.0.0"
authors = [
  { name="RStudio, PBC", email="rspm@rstudio.com" },
]
description = "A Demo Python Package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/rstudio/package-manager-demo"
"Bug Tracker" = "https://github.com/rstudio/package-manager-demo/issues"
